# bno055_hardware

./: .gitmodules  NOTES  README.md  frames_2024-06-09_15.59.33.gv  frames_2024-06-09_16.06.54.gv  tree_dir.txt
firmware/: platformio.ini
firmware/install/: local_setup.sh  setup.sh
firmware/lib/micro_ros/: bno055_interface.cpp  bno055_interface.h
firmware/log/: latest_build
firmware/src/: firmware copy.txt  firmware copy2.txt  firmware.cpp  firmware.ino  temp.txt
install/: local_setup.sh  setup.sh
install/imu_complementary_filter/lib/imu_complementary_filter/: complementary_filter_node
install/imu_complementary_filter/share/imu_complementary_filter/: package.sh
install/imu_filter_madgwick/lib/imu_filter_madgwick/: imu_filter_madgwick_node
install/imu_filter_madgwick/share/imu_filter_madgwick/: package.sh
install/imu_test/lib/imu_test/: ground_speed_simulator  height_simulator  imu_test  (+1 more)
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
log/: latest_build
micro_ros_agent/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
micro_ros_agent/log/: latest_build
src/imu_test/: package.xml  setup.py
src/imu_test/imu_test/: height_simulator.py  imu_3d_visualization.py  imu_test.py  output.txt
src/imu_test/launch/: imu_3d_visualization.launch.py  imu_test.launch.py  imu_test.launch.txt
src/imu_test/rviz/: robotmodel.rviz
src/imu_test/urdf/: robotmodel.urdf
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/set_frame_id/: package.xml  setup.cfg  setup.py
src/set_frame_id/set_frame_id/: set_frame_id_node.py
(+39 files in other folders)
