<?xml version="1.0"?>
<package format="3">
  <name>set_frame_id</name>
  <version>0.1.0</version>
  <description>Set frame_id for IMU messages</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
